fix: 增加BOM查询接口
